--- a/AgoraEduSDK/Modules/ChatWidget/ChatWidget/zh-Hans.lproj/Localizable.strings
+++ b/AgoraEduSDK/Modules/ChatWidget/ChatWidget/zh-Hans.lproj/Localizable.strings
@@ -27,3 +27,4 @@ ChatRecall = "撤回";
 ChatRecallAMessage = "撤回一条消息";
 ChatMutedByTeacher = "您被%@老师禁止发言了";
 ChatUnmutedByTeacher = "您被%@老师允许发言了";
+ChatTeacher = "老师";
