--- a/AgoraEduSDK/Modules/ChatWidget/ChatWidget/en.lproj/Localizable.strings
+++ b/AgoraEduSDK/Modules/ChatWidget/ChatWidget/en.lproj/Localizable.strings
@@ -11,6 +11,8 @@ ChatQA = "Q&A";
 ChatAnnouncement = "Notice";
 ChatMembers= "Members";
 ChatSearch= "Search";
+ChatTeacher= "Teacher";
+ChatAssistant= "Assistant";
 ChatEmptyText = "No Message";
 ChatPlaceholderText = "Input";
 ChatNoAnnouncement = "No Notice";
