--- a/AgoraEduSDK/Modules/ChatWidget/ChatWidget/zh-Hans.lproj/Localizable.strings
+++ b/AgoraEduSDK/Modules/ChatWidget/ChatWidget/zh-Hans.lproj/Localizable.strings
@@ -7,7 +7,10 @@
 */
 
 ChatText = "聊天";
+ChatQA = "问答";
 ChatAnnouncement= "公告";
+ChatMembers= "成员";
+ChatSearch= "搜索";
 ChatTeacher= "老师";
 ChatAssistant= "助教";
 ChatEmptyText = "还没有消息";
@@ -15,9 +18,9 @@ ChatPlaceholderText = "请输入消息";
 ChatNoAnnouncement = "暂无公告";
 ChatSendText = "发送";
 ChatAllMute = "全员禁言中";
-ChatMute = "您已被老师禁言，请谨慎发言";
+ChatMuteText = "您已被老师禁言，请谨慎发言";
 ChatLoginFaild = "登录失败";
-ChatJoinFaild = "登录失败";
+ChatJoinFaild = "加入失败";
 ChatSendFaildByMute = "禁言中，发送失败";
 ChatSendFaildBySensitive = "发送内容包含敏感词，发送失败";
 ChatLoginOnOtherDevice = "账户在其他设备登录";
@@ -29,3 +32,12 @@ ChatRecall = "撤回";
 ChatRecallAMessage = "撤回一条消息";
 ChatMutedByTeacher = "您被%@老师禁止发言了";
 ChatUnmutedByTeacher = "您被%@老师允许发言了";
+ChatPublish = "去发布";
+ChatUpdate = "更新";
+ChatRemove = "删除";
+ChatSave = "发布";
+ChatCancel = "取消";
+ChatEmptyQA = "还没有提问";
+ChatUserRecallMsg = "撤回一条消息";
+ChatMute = "禁言";
+ChatUnmute = "解除禁言";
