--- a/AgoraEduSDK/Modules/ChatWidget/ChatWidget/en.lproj/Localizable.strings
+++ b/AgoraEduSDK/Modules/ChatWidget/ChatWidget/en.lproj/Localizable.strings
@@ -9,7 +9,7 @@
 ChatText = "Chat";
 ChatQA = "Q&A";
 ChatAnnouncement = "Notice";
-ChatMembers= "Members";
+ChatMembers= "Users";
 ChatSearch= "Search";
 ChatTeacher = "Teacher";
 ChatAssistant = "Assistant";
