--- a/AgoraEduSDK/Modules/ChatWidget/ChatWidget/en.lproj/Localizable.strings
+++ b/AgoraEduSDK/Modules/ChatWidget/ChatWidget/en.lproj/Localizable.strings
@@ -42,3 +42,9 @@ ChatUserRecallMsg = "recall a message";
 ChatMute = "mute";
 ChatUnmute = "unmute";
 ChatNewMsgs = "New messages";
+ChatReedit = "Edit";
+ChatOK = "OK";
+ChatRemoveAnnouncementTitle = "Remove Announcement";
+ChatRemoveAnnouncementText = "Are you sure to remove announcement?";
+ChatRemoveMsgTitle = "Remove Message";
+ChatRemoveMsgText = "Are you sure to remove a message?";
