--- a/AgoraEduSDK/Modules/ChatWidget/ChatWidget/zh-Hans.lproj/Localizable.strings
+++ b/AgoraEduSDK/Modules/ChatWidget/ChatWidget/zh-Hans.lproj/Localizable.strings
@@ -42,3 +42,9 @@ ChatUserRecallMsg = "撤回了一条消息";
 ChatMute = "禁言";
 ChatUnmute = "解除禁言";
 ChatNewMsgs = "条新消息";
+ChatReedit = "重新编辑";
+ChatOK = "确认";
+ChatRemoveAnnouncementTitle = "删除公告";
+ChatRemoveAnnouncementText = "确认删除公告吗？";
+ChatRemoveMsgTitle = "删除消息";
+ChatRemoveMsgText = "确认删除公告吗？";
